re-fix mobile white space

--- a/styles.css
+++ b/styles.css
@@ -4,22 +4,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-
 html, body {
     height: 100%;
     margin: 0;
     padding: 0;
     overflow-x: hidden;
     overscroll-behavior: none;
-}
-
-
-body{
-    padding-top: env(safe-area-inset-top);
-    padding-left: env(safe-area-inset-left);
-    padding-right: env(safe-area-inset-right);
-    padding-bottom: env(safe-area-inset-bottom);
     background: radial-gradient(circle,rgba(28, 29, 33, 1) 0%, rgba(32, 33, 36, 1) 100%);
+}
+body{
     padding: 3% 5%;
     font-family: 'Inter', sans-serif;
 }
@@ -146,12 +139,25 @@ nav a:hover::after {
 
 
 
-    /* General reformatting */  
+    /* General reformatting */
+    html, body {
+        margin: 0;
+        padding: 0;
+        background-color: black; /* fallback */
+    }  
     body{
-        padding: 6% 6%;
+        position: relative;
+        overflow-x: hidden;
+        overscroll-behavior-y: none;
     }
     .top-row-right-section{
         gap: 9%;
+    }
+    @supports(padding: max(0px)) {
+        body {
+          padding-top: constant(safe-area-inset-top); /* old iOS */
+          padding-top: env(safe-area-inset-top);      /* new iOS */
+        }
     }
 
 
